...
                android:layout_height="wrap_content"
                android:text="@string/quality_options"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4" />

            <Spinner
                android:id="@+id/sp_resolutions"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginLeft="@dimen/dimen_20"
                android:entries="@array/resolution_types">

            </Spinner>
...
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4"
                tools:text="分辨率   1920 X 1080" />

            <com.zego.livedemo5.ui.widgets.CustomSeekBar
                android:id="@+id/sb_resolution"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4"
                tools:text="帧率   30" />

            <com.zego.livedemo5.ui.widgets.CustomSeekBar
                android:id="@+id/sb_fps"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4"
                tools:text="码率   30" />

            <com.zego.livedemo5.ui.widgets.CustomSeekBar
                android:id="@+id/sb_bitrate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4" />

            <View style="@style/HorizontalDivider" />

            <TextView
                android:id="@+id/tv_advanced"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45"
                android:background="@drawable/sl_btn"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_5"
                android:text="@string/advanced"
...
                        android:layout_height="wrap_content"
                        android:text="@string/external_capture"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_4" />

                    <ToggleButton
                        android:id="@+id/tb_video_capture"
                        style="@style/ToggleButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:checked="false" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:text="@string/external_filter"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_4" />

                    <ToggleButton
                        android:id="@+id/tb_video_filter"
                        style="@style/ToggleButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:checked="false" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_encode"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_4" />

                    <ToggleButton
                        android:id="@+id/tb_hardware_encode"
                        style="@style/ToggleButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:checked="false" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_decode"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_4" />

                    <ToggleButton
                        android:id="@+id/tb_hardware_decode"
                        style="@style/ToggleButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:checked="false" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:text="@string/rate_control"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_4" />

                    <ToggleButton
                        android:id="@+id/tb_rate_control"
                        style="@style/ToggleButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:checked="false" />
                </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="@string/preview_mirror"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4" />

            <ToggleButton
                android:id="@+id/tb_preview_mirror"
                style="@style/ToggleButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:checked="true" />
        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="@string/capture_mirror"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_4" />

            <ToggleButton
                android:id="@+id/tb_capture_mirror"
                style="@style/ToggleButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:checked="false" />
        </LinearLayout>
...
