...
                android:layout_centerVertical="true"
                android:text="@string/camera"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_3" />

            <ToggleButton
                android:id="@+id/tb_camera"
                style="@style/ToggleButtonText"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

...
                android:layout_centerVertical="true"
                android:text="@string/front_camera"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_3" />

            <ToggleButton
                android:id="@+id/tb_front_cam"

                style="@style/ToggleButtonText"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
...
                android:layout_centerVertical="true"
                android:text="@string/mic"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_3" />

            <ToggleButton
                android:id="@+id/tb_mic"

                style="@style/ToggleButtonText"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
...
                android:layout_centerVertical="true"
                android:text="@string/flashlight"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_3" />

            <ToggleButton
                android:id="@+id/tb_torch"

                style="@style/ToggleButtonText"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
...
                android:layout_centerVertical="true"
                android:text="@string/background_music"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_3" />

            <ToggleButton
                android:id="@+id/tb_background_music"
                style="@style/ToggleButtonText"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
...
