...
        android:textSize="@dimen/text_size_4"
        />

    <View style="@style/HorizontalDivider"/>

    <TextView
        android:id="@+id/tv_select_single_anchor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@drawable/sl_item"
        android:gravity="center"
        android:text="@string/single_anchor_mode"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_5"/>

    <View style="@style/HorizontalDivider"/>

    <TextView
        android:id="@+id/tv_select_more_anchors"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@drawable/sl_item"
        android:gravity="center"
        android:text="@string/more_anchors_mode"
        android:textColor="@color/text_black"
...
